@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6431 2004/07/03 04:02:20 taya Exp $
+$NetBSD: CHANGES,v 1.6432 2004/07/03 05:28:09 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3223,3 +3223,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added dd2-0.2.1 [xtraeme 2004-07-03]
 	Updated firefox to 0.9.1 [taya 2004-07-03]
 	Updated firefox-gtk2 to 0.9.1 [taya 2004-07-03]
+	Updated win32-codecs to 20040703 [xtraeme 2004-07-03]
